--- a/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
+++ b/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
@@ -153,10 +153,10 @@
     <Compile Include="ConsoleColours.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
-    <Compile Include="EndpointConfigurationExtensions.cs" />
+    <Compile Include="Extensions\EndpointConfigurationExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringExtensions.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Verbs\ImportAccountPaymentsVerb.cs" />
     <Compile Include="Verbs\NServiceBusVerbBase.cs" />
   </ItemGroup>
