--- a/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
+++ b/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
@@ -149,6 +149,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ImportAccountLevyDeclarationsAction.cs" />
     <Compile Include="Actions\ImportPaymentsAction.cs" />
     <Compile Include="ConsoleColours.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
@@ -157,6 +158,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Verbs\ImportAccountLevyDeclarationsVerb.cs" />
     <Compile Include="Verbs\ImportAccountPaymentsVerb.cs" />
     <Compile Include="Verbs\NServiceBusVerbBase.cs" />
   </ItemGroup>
