--- a/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
+++ b/src/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
@@ -91,7 +91,7 @@
       <HintPath>..\packages\SFA.DAS.Configuration.AzureTableStorage.1.0.0.53229\lib\net45\SFA.DAS.Configuration.AzureTableStorage.dll</HintPath>
     </Reference>
     <Reference Include="SFA.DAS.EmployerFinance.Messages, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SFA.DAS.EmployerFinance.Messages.1.3.1807\lib\net462\SFA.DAS.EmployerFinance.Messages.dll</HintPath>
+      <HintPath>..\packages\SFA.DAS.EmployerFinance.Messages.1.6.1\lib\net462\SFA.DAS.EmployerFinance.Messages.dll</HintPath>
     </Reference>
     <Reference Include="SFA.DAS.Messaging, Version=3.0.0.63765, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SFA.DAS.Messaging.3.0.0.63765\lib\net45\SFA.DAS.Messaging.dll</HintPath>
@@ -149,6 +149,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ExpireFundsAction.cs" />
+    <Compile Include="Actions\ExpireAccountFundsAction.cs" />
     <Compile Include="Actions\ImportAccountLevyDeclarationsAction.cs" />
     <Compile Include="Actions\ImportPaymentsAction.cs" />
     <Compile Include="ConsoleColours.cs" />
@@ -158,6 +160,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Verbs\ExpireFundsVerb.cs" />
+    <Compile Include="Verbs\ExpireAccountFundsVerb.cs" />
     <Compile Include="Verbs\ImportAccountLevyDeclarationsVerb.cs" />
     <Compile Include="Verbs\ImportAccountPaymentsVerb.cs" />
     <Compile Include="Verbs\NServiceBusVerbBase.cs" />
