--- a/src/legacy/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
+++ b/src/legacy/SFA.DAS.NServiceBus.Tools.MessagePublisher/SFA.DAS.NServiceBus.Tools.MessagePublisher.csproj
@@ -8,12 +8,13 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>SFA.DAS.NServiceBus.Tools.MessagePublisher</RootNamespace>
     <AssemblyName>SFA.DAS.NServiceBus.Tools.MessagePublisher</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
