--- a/src/SFA.DAS.NServiceBus.Tools.Functions/SFA.DAS.NServiceBus.Tools.Functions.csproj
+++ b/src/SFA.DAS.NServiceBus.Tools.Functions/SFA.DAS.NServiceBus.Tools.Functions.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Azure.Messaging.ServiceBus" Version="7.18.1" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.23.0" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.4" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.2.0" />
@@ -20,6 +21,8 @@
 		<PackageReference Include="NServiceBus.Newtonsoft.Json" Version="4.0.0" />
 
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+
+		<PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="3.0.84" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Update="host.json">
