--- a/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
+++ b/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
@@ -39,6 +39,6 @@
         <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext"/>
     </ItemGroup>
     <ItemGroup>
-        <Folder Include="Messages\"/>
+        <Folder Include="Commands\" />
     </ItemGroup>
 </Project>
