Pulling in Finance messages project

--- a/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
+++ b/src/SFA.DAS.ServiceBus.Tools.Functions/SFA.DAS.ServiceBus.Tools.Functions.csproj
@@ -38,4 +38,7 @@
     <ItemGroup>
         <Using Include="System.Threading.ExecutionContext" Alias="ExecutionContext"/>
     </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\SFA.DAS.EmployerFinance.Messages\SFA.DAS.EmployerFinance.Messages.csproj" />
+    </ItemGroup>
 </Project>
