--- a/src/SFA.DAS.EmployerFinance.Messages/SFA.DAS.EmployerFinance.Messages.csproj
+++ b/src/SFA.DAS.EmployerFinance.Messages/SFA.DAS.EmployerFinance.Messages.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <LangVersion>latestmajor</LangVersion>
-    <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>default</LangVersion>
+    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>true</IsPackable>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
         
